--- a/css/style.css
+++ b/css/style.css
@@ -478,10 +478,13 @@ body{
 }
 .input-text{
     width: 740px !important;
+    height: 43px;
     margin: 40px auto;
+  
 }
 .cont-text{
     text-align: center;
+    padding: 30px 0;
 }
 
 .section-eight-main p{
@@ -492,10 +495,87 @@ body{
 .section-eight-main span{
     font-size: 1.5em;
     font-family: "Jost", Arial, Helvetica, sans-serif;
-    letter-spacing: 15px;
     color: #3E3FD8;
     font-weight: bold;
     
 }
 
-.
+.section-eight-main h2{
+    font-size: 3em;
+    margin: 30px 0;
+}
+
+.div-input, .btn-input{
+    border-radius: 150px !important;
+}
+
+.div-input{
+    z-index: 1;
+}
+.btn-input{
+    position: relative;
+    right: 163px;
+    z-index: 2;
+    height: 43px;
+    width: 166px;
+    background-color: #3E3FD8;
+    color: #fff
+}
+
+/* Footer  -------------------------------------------------------------------*/
+
+.footer{
+    background-color: #3E3FD8;
+    padding: 70px 0;
+}
+
+.footer-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+
+
+}
+
+.footer-divs-one img{
+    padding-bottom: 30px;
+}
+
+
+.footer-divs-one p{
+    width: 330px;
+    text-align: justify;
+    color: #fff;
+}
+
+.footer-divs-one .list-social{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+}
+
+.footer-divs-one ul li, .footer-divs ul li{
+    list-style-type: none;
+    position: relative;
+    left: -33px;
+
+}
+
+.footer-divs a{
+    color: #fff;
+    padding: 5px 0;
+}
+
+.footer-divs h5{
+    color: #fff;
+}
+
+.footer-copy{
+    color: #fff;
+   position: relative;
+   bottom: -60px;
+   text-align: center;
+}
